# active-geolocator

./: .gitignore  LICENSE  README.md  calibrate  calibration-report  calibration-report-from-db  claimed-country-accuracy  confusion-report  dissimilarity-matrix  export-batch-from-db  export-calibration-for-web  index.html  instr.html  latency-vectors-from-db  locate-from-db  locate-from-pickle  locate-v2-cbg-from-db  methods.html  params.json  probe.py  research.html  retrieve-calibration-data-ripe  summarize-confusion-report  summarize-geoip  summarize-locs
client/: Makefile.in  config.h.in  configure  configure.ac  probe-core.c  probe.cf
db/: agweb_schema.sql  import-openvpn-group.py  import-reports.py  schema.sql
lib/: titlecase.py
lib/ageo/: __init__.py  ageo.py  calibration.py  ranging.py
maps/: README.ne  baseline_from_raster.py  land-lakes-glac.hdf  make_geog_baseline.py  make_region_pointsets.py
measurement-client/: Makefile.in  config.h.in  configure  configure.ac  probe  probe-core-common.c  probe-core-direct.c  probe-core-socks.c  probe-core.c  probe-core.h  probe-manual  probe.cf
stylesheets/: styles.css
web/: agweb.py  client.css  commandline.html  details-poly.css  index.html  instr.html  methods.html  overview.md  research.html  ui.js  worker.js
web/api/1/: config.php.sample  landmark-list-with-locations.php  landmark-list.php  probe-results.php
web/client/: client.css  client.js  index.html
web/instance/: .gitignore  config.py.template
web/lib/: agapi.py  config_defaults.py  database.py  geometry.py  ipgeo.py
web/s/: styles.css
web/scripts/: update_ripe_probes.py
web/static/: client.css  geographiclib-1.42.js  styles.css  ui.js  worker.js
web/static/ol-3.18.2/: ol-debug.js
web/stylesheets/: styles_view_based.css
web/templates/: _base.html  _error.html  commandline.html  index.html  research.html
